Add preset endpoint selector with provider hints

--- a/index.html
+++ b/index.html
@@ -87,11 +87,25 @@
     }
 
     .form-group input,
-    .form-group select {
+    .form-group select,
+    .form-group textarea {
       width: 100%;
       padding: 6px 8px;
       border: 1px solid #ccc;
       border-radius: 4px;
+    }
+
+    .hint-text {
+      margin-top: -4px;
+      margin-bottom: 12px;
+      font-size: 0.85rem;
+      line-height: 1.4;
+      color: #555;
+    }
+
+    .hint-text a {
+      color: inherit;
+      text-decoration: underline;
     }
 
     .form-group button {
@@ -696,9 +710,14 @@
         <button type="button" id="closeSidebarBtn" class="sidebar-close" aria-label="Close settings">×</button>
       </div>
       <div class="form-group">
+        <label for="endpointSelect">Quick-start endpoints</label>
+        <select id="endpointSelect"></select>
+      </div>
+      <div class="form-group">
         <label for="endpointInput">API endpoint</label>
         <input type="text" id="endpointInput" placeholder="https://api.example.com/v1/chat/completions" />
       </div>
+      <p id="endpointHint" class="hint-text" role="note"></p>
       <div class="form-group">
         <label for="modelSelect">Model</label>
         <div class="model-select-row">
@@ -886,11 +905,13 @@
 
     (() => {
       // DOM element references
+      const endpointSelect = document.getElementById('endpointSelect');
       const endpointInput = document.getElementById('endpointInput');
       const tokenInput = document.getElementById('tokenInput');
       const modelSelect = document.getElementById('modelSelect');
       const refreshModelsBtn = document.getElementById('refreshModelsBtn');
       const saveConfigBtn = document.getElementById('saveConfigBtn');
+      const endpointHint = document.getElementById('endpointHint');
       const threadList = document.getElementById('threadList');
       const exportBtn = document.getElementById('exportBtn');
       const importBtn = document.getElementById('importBtn');
@@ -934,6 +955,240 @@
       const CONFIG_KEY = 'chatConfig';
       const THREAD_KEY = 'chatThreads';
       const MODELS_KEY = 'chatModels';
+
+      const endpointOptions = [
+        {
+          id: 'choose',
+          label: 'Select an endpoint…',
+          baseUrl: '',
+          hint:
+            'Pick a provider from the list to auto-fill the API endpoint and see instructions for locating its API key. You can still paste any custom endpoint below.'
+        },
+        {
+          id: 'openrouter',
+          label: 'OpenRouter — multi-model hub',
+          baseUrl: 'https://openrouter.ai/api/v1',
+          hint:
+            'Aggregator of Anthropic, Mistral, Llama 3 and more. Create an account at <a href="https://openrouter.ai/" target="_blank" rel="noopener">openrouter.ai</a>, open <strong>API Keys</strong>, click <strong>Create Key</strong>, set an optional spend limit, and copy the key (it is shown only once).'
+        },
+        {
+          id: 'vercel',
+          label: 'Vercel AI Gateway',
+          baseUrl: 'https://ai-gateway.vercel.sh/v1',
+          hint:
+            'Proxy that fans out to Anthropic, Groq, Mistral, Perplexity and more. In the Vercel dashboard go to <strong>AI Gateway → API Keys</strong>, click <strong>Create key</strong>, name it, and copy the generated key for your requests.'
+        },
+        {
+          id: 'cloudflare',
+          label: 'Cloudflare AI Gateway',
+          baseUrl: 'https://gateway.ai.cloudflare.com/v1/{account_id}/{gateway_id}/compat',
+          hint:
+            'Routes to Gemini, Cohere, Perplexity and other providers. In the Cloudflare dashboard open <strong>AI → AI Gateway</strong>, choose your gateway, add provider API keys under <strong>Provider Keys</strong>, and optionally generate an access token to send in the <code>cf-aig-authorization</code> header.',
+          detect: value => value.startsWith('https://gateway.ai.cloudflare.com/')
+        },
+        {
+          id: 'anyscale',
+          label: 'Anyscale Endpoints',
+          baseUrl: 'https://api.endpoints.anyscale.com/v1',
+          hint:
+            'Hosted Mixtral and Llama family models. Sign in at <a href="https://www.anyscale.com/" target="_blank" rel="noopener">Anyscale</a>, open the Endpoints dashboard, and create an API key to authenticate with this URL.'
+        },
+        {
+          id: 'groq',
+          label: 'Groq — low-latency inference',
+          baseUrl: 'https://api.groq.com/openai/v1',
+          hint:
+            'Runs LLaMA and Mixtral models on Groq hardware. After logging in to <a href="https://console.groq.com/" target="_blank" rel="noopener">Groq Cloud</a>, open <strong>Developers</strong>, click <strong>Create API Key</strong>, and copy the key when it appears.'
+        },
+        {
+          id: 'together',
+          label: 'Together AI',
+          baseUrl: 'https://api.together.xyz/v1',
+          hint:
+            'Unified endpoint for Meta, Mistral, DeepSeek, Google and more. Create an account at <a href="https://api.together.xyz/" target="_blank" rel="noopener">Together AI</a>, visit <strong>Settings → API Keys</strong>, generate a key, and paste it here.'
+        },
+        {
+          id: 'fireworks',
+          label: 'Fireworks AI',
+          baseUrl: 'https://api.fireworks.ai/inference/v1',
+          hint:
+            'Fireworks hosts Mixtral-based instruct models and other OSS LLMs. In the Fireworks dashboard open <strong>API Keys</strong>, click <strong>Create API Key</strong>, and copy the value for use with this endpoint.'
+        },
+        {
+          id: 'deepseek',
+          label: 'DeepSeek',
+          baseUrl: 'https://api.deepseek.com',
+          hint:
+            'Access DeepSeek’s reasoning models. Sign in to <a href="https://platform.deepseek.com/" target="_blank" rel="noopener">DeepSeek</a>, choose <strong>Access API → API Keys</strong>, create a key, and store it securely because it is only shown once.'
+        },
+        {
+          id: 'hyperbolic',
+          label: 'Hyperbolic',
+          baseUrl: 'https://api.hyperbolic.xyz/v1',
+          hint:
+            'Scaled-down OSS models with OpenAI compatibility. Log in to Hyperbolic, create an API key in your dashboard, and use it alongside this base URL.'
+        },
+        {
+          id: 'deepinfra',
+          label: 'DeepInfra',
+          baseUrl: 'https://api.deepinfra.com/v1/openai',
+          hint:
+            'Chat, completion, and embedding APIs for open-source LLMs. Generate an API key from the <a href="https://deepinfra.com/" target="_blank" rel="noopener">DeepInfra</a> console and include it in the <code>Authorization</code> header.'
+        },
+        {
+          id: 'perplexity',
+          label: 'Perplexity Sonar',
+          baseUrl: 'https://api.perplexity.ai',
+          hint:
+            'Grounded web-search models with an OpenAI-style API. From the Perplexity account dashboard create an API key, then use it with this endpoint.'
+        },
+        {
+          id: 'huggingface-router',
+          label: 'Hugging Face router',
+          baseUrl: 'https://router.huggingface.co/v1',
+          hint:
+            'Route to providers like Novita, Groq or Together via the model name. Create or reuse a Hugging Face access token at <a href="https://huggingface.co/settings/tokens" target="_blank" rel="noopener">huggingface.co/settings/tokens</a> and pass it as your API key.'
+        },
+        {
+          id: 'huggingface-tgi',
+          label: 'Hugging Face TGI (local)',
+          baseUrl: 'http://localhost:8080/v1',
+          hint:
+            'Run <strong>text-generation-inference</strong> locally and point the client at this base URL. No API key is required when running on your own machine.'
+        },
+        {
+          id: 'lorax',
+          label: 'LoRAX (local server)',
+          baseUrl: 'http://127.0.0.1:8080/v1',
+          hint:
+            'LoRAX exposes an OpenAI-compatible endpoint on your workstation. Start the server and use any placeholder key if authentication is disabled.'
+        },
+        {
+          id: 'lmstudio',
+          label: 'LM Studio (desktop)',
+          baseUrl: 'http://localhost:1234/v1',
+          hint:
+            'LM Studio ships with an OpenAI-compatible API. Start the local server from the LM Studio interface and use this URL (the API key field can stay empty).'
+        },
+        {
+          id: 'ollama',
+          label: 'Ollama (local)',
+          baseUrl: 'http://localhost:11434/v1',
+          hint:
+            'Ollama serves local LLaMA, Mistral and Phi models. No API key is required—any string will work—so you can leave the token blank.'
+        },
+        {
+          id: 'runpod',
+          label: 'RunPod vLLM worker',
+          baseUrl: 'https://api.runpod.ai/v2/ENDPOINT_ID/openai/v1',
+          hint:
+            'Each RunPod worker exposes an OpenAI-compatible interface. Replace <code>ENDPOINT_ID</code> with your worker ID and use the API key from the RunPod dashboard.',
+          detect: value => value.startsWith('https://api.runpod.ai/v2/')
+        },
+        {
+          id: 'baseten',
+          label: 'Baseten (model-specific URL)',
+          baseUrl: 'https://{model_id}.api.baseten.co/environments/{environment}/content/v1',
+          hint:
+            'Deploy models with Engine Builder to receive an OpenAI-style endpoint. Use the format <code>https://{model_id}.api.baseten.co/environments/&lt;env&gt;/content/v1</code> and authenticate with a Baseten personal API key created from <strong>Account → API keys</strong>.',
+          detect: value => value.includes('.api.baseten.co')
+        },
+        {
+          id: 'custom',
+          label: 'Custom / self-hosted endpoint',
+          baseUrl: '',
+          hint:
+            'Paste any OpenAI-compatible base URL, such as a corporate gateway or another local server. Remember to include the provider’s API key (if required) and press <strong>Save config</strong> after editing.'
+        }
+      ];
+
+      const escapeHtml = str =>
+        (str || '')
+          .replace(/&/g, '&amp;')
+          .replace(/</g, '&lt;')
+          .replace(/>/g, '&gt;')
+          .replace(/"/g, '&quot;')
+          .replace(/'/g, '&#39;');
+
+      function getEndpointOptionById(id) {
+        return endpointOptions.find(option => option.id === id) || endpointOptions[0];
+      }
+
+      function findEndpointOptionForValue(value) {
+        const normalized = (value || '').trim().toLowerCase();
+        if (!normalized) {
+          return getEndpointOptionById('choose');
+        }
+        const match = endpointOptions.find(option => {
+          if (option.baseUrl) {
+            const compare = option.baseUrl.toLowerCase();
+            if (compare && normalized.startsWith(compare)) {
+              return true;
+            }
+          }
+          if (typeof option.detect === 'function') {
+            try {
+              if (option.detect(normalized)) {
+                return true;
+              }
+            } catch (err) {
+              console.warn('Endpoint detection failed for option', option.id, err);
+            }
+          }
+          return false;
+        });
+        return match || getEndpointOptionById('custom');
+      }
+
+      function updateEndpointHint(option, currentValue) {
+        if (!endpointHint) return;
+        const target = option || getEndpointOptionById('choose');
+        let html = target.hint || '';
+        if (target.id === 'custom' && currentValue) {
+          html += `<br /><strong>Using:</strong> <code>${escapeHtml(currentValue)}</code>`;
+        } else if (target.baseUrl) {
+          html += `<br /><strong>Endpoint URL:</strong> <code>${escapeHtml(target.baseUrl)}</code>`;
+        }
+        if (!html) {
+          endpointHint.textContent = '';
+          endpointHint.hidden = true;
+        } else {
+          endpointHint.innerHTML = html;
+          endpointHint.hidden = false;
+        }
+      }
+
+      function syncEndpointControls(value) {
+        const option = findEndpointOptionForValue(value);
+        if (endpointSelect) {
+          endpointSelect.value = option.id;
+        }
+        updateEndpointHint(option, value);
+      }
+
+      function applyEndpointOption(optionId) {
+        const option = getEndpointOptionById(optionId);
+        if (!option) return;
+        if (option.id === 'choose') {
+          endpointInput.value = '';
+        } else if (option.baseUrl) {
+          endpointInput.value = option.baseUrl;
+        }
+        syncEndpointControls(endpointInput.value.trim());
+      }
+
+      function populateEndpointSelect() {
+        if (!endpointSelect) return;
+        endpointSelect.innerHTML = '';
+        endpointOptions.forEach(option => {
+          const opt = document.createElement('option');
+          opt.value = option.id;
+          opt.textContent = option.label;
+          endpointSelect.appendChild(opt);
+        });
+        const currentValue = endpointInput ? endpointInput.value.trim() : '';
+        syncEndpointControls(currentValue);
+      }
 
       const readJson = (store, key, fallback) => {
         try {
@@ -1059,6 +1314,7 @@
         config = { ...defaults, ...readJson(sessionStorage, CONFIG_KEY, {}) };
         endpointInput.value = config.endpoint;
         tokenInput.value = config.token;
+        syncEndpointControls(config.endpoint);
         renderModelOptions(models, config.model);
       }
 
@@ -1069,6 +1325,7 @@
           model: modelSelect.value.trim()
         };
         persistConfig();
+        syncEndpointControls(config.endpoint);
         updateChatAvailability();
         alert('Configuration saved for this session.');
         refreshModels({ silent: true });
@@ -1785,6 +2042,7 @@
             persistConfig();
             endpointInput.value = config.endpoint;
             tokenInput.value = config.token;
+            syncEndpointControls(config.endpoint);
             if (Array.isArray(imported?.models)) {
               storeModels(imported.models);
             }
@@ -1848,6 +2106,7 @@
        * silently if an endpoint is provided without cached models.
        */
       function init() {
+        populateEndpointSelect();
         loadModels();
         loadConfig();
         loadThreads();
@@ -1872,6 +2131,16 @@
       init();
 
       // Attach event listeners
+      if (endpointSelect) {
+        endpointSelect.addEventListener('change', () => {
+          applyEndpointOption(endpointSelect.value);
+        });
+      }
+      if (endpointInput) {
+        endpointInput.addEventListener('input', () => {
+          syncEndpointControls(endpointInput.value.trim());
+        });
+      }
       refreshModelsBtn.addEventListener('click', () => refreshModels());
       modelSelect.addEventListener('change', () => {
         config.model = modelSelect.value;
